--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
            <div class="text-content">
                <h3 class="text-heading">Chicago</h3>
                <div class="text-description">
-                   <b>Thank you, Chicago - A night we won't forget.</b>
+                   <p>Thank you, Chicago - A night we won't forget.</pơ>
                 </div>
                
            </div>
@@ -165,7 +165,7 @@
                         Fan? Drop a note!
                     </p>
                     <div class="row contact-content">
-                        <div class="col col-half s-col-full contact-info mt-16">
+                        <div class="col col-half s-col-full contact-info s-mt-32">
                             <p class="contact-detail"><i class="ti-location-pin"></i> Chicago, US</p>
                             <p class="contact-detail"><i class="ti-mobile"></i> Phone: <a href="tel:+00 151515">+00 151515</a></p>
                             <p class="contact-detail"><i class="ti-email"></i> Email: <a href="mailto:mail@mail.com">mail@mail.com</a></p>
